# fastapi-learning

./: .gitignore  README.md  hf_sentiment_analysis_app.py  iris_classify_app.py  iris_classify_model_train.py  langchain_llm.py  pyproject.toml  rest_api_testing.py  simple_app.py  testing.ipynb
enterprise_fastapi_app/: README.md  main.py  request.py
enterprise_fastapi_app/api/: events.py  users.py
enterprise_fastapi_app/core/: config.py
enterprise_fastapi_app/schemas/: event.py  user.py
enterprise_fastapi_app/services/: event_service.py
http_status_codes/: README.md  auth.py  database.py  main.py  models.py  rate_limit.py  schemas.py
http_status_codes/routers/: users.py
pydantic-tutorial/: main.py  pydantic_basic.py  snippets.txt
router_crud/: check_db.py  database.py  main.py  models.py  users.py
social-media-backend/: ARCHITECTURE.md  DATA_SCIENCE_TO_BACKEND.md  QUICK_REFERENCE.md  README.md  START_HERE.md  auth.py  database.py  exceptions.py  main.py  microblog.db  models.py  schemas.py
social-media-backend/routes/: auth.py  posts.py  users.py
