[project]
name = "fastapi-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic[email]>=2.11.4",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
