[project]
name = "fastapi-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "matplotlib>=3.10.7",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
]
